2回目のコミット

--- a/lunch_hack15/src/main/resources/templates/user_status/user_status_top.html
+++ b/lunch_hack15/src/main/resources/templates/user_status/user_status_top.html
@@ -24,7 +24,7 @@
         <form th:action="@{/user_status/create}" th:object="${lunchUserStatusForm}" class="form-horizontal" method="post">
             <fieldset>
             
-                <legend>ステータス新規情報作成</legend>
+                <legend>ステータス情報作成</legend>
 
           <div class="form-group" th:classappend="${#fields.hasErrors('date')}? 'has-error has-feedback'">
 
