3回目のコミット/pullリクエスト付き

--- a/lunch_hack15/src/main/resources/templates/user_status/user_status_top.html
+++ b/lunch_hack15/src/main/resources/templates/user_status/user_status_top.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container">
     <h1>ステータス管理システム</h1>
-    <a href="http://localhost:8080/user_master">ユーザー/一覧へ</a>
+    <a href="http://localhost:8080/user_master">"ユーザー"一覧へ</a>
   
 
 
